@@ -10,6 +10,7 @@ TMW.CHANGELOG = {
 [==[]==],
 [==[====Bug Fixes====]==],
 [==[* Fixed an issue that caused Unit Conditions to not work with special units (group, maintank, mainassist, and player names).]==],
+[==[* Mark of Shadowmoon and Mark of Blackrock should now work with the Internal Cooldown icon type.]==],
 [==[]==],
 [==[===v7.2.2===]==],
 [==[* You can now easily clone an event handler by right-clicking it in the Notifications tab.]==],
